# digital-examen

./: .claudecode.md  .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  db.sqlite3  db.sqlite3-shm  db.sqlite3-wal  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  install.sh  main.py  requirements.txt  seating_output.json
UKK_backend/protocol/: CMakeLists.txt  build.sh
UKK_backend/protocol/include/ukk/protocol/: concepts.hpp  header.hpp
UKK_backend/protocol/include/ukk/protocol/messages/: event.hpp  metrics.hpp  register.hpp  task.hpp  task_result.hpp
UKK_backend/protocol/schemas/: ack.json  event.json  heartbeat.json  ping.json  pong.json  protocol.json  register.json  screenshot.json  task.json  task_result.json
UKK_backend/protocol/tests/: CMakeLists.txt  test_serialization.cpp  test_types.cpp
analytics/: routers.py  schemas.py
auth/: models.py  password_service.py  routers.py  schemas.py  session_service.py
blanks/: blank.py  ids.txt  models.py  routers.py  schemas.py  service.py  titul.py
classes/: models.py  permissions.py  routers.py  schemas.py  service.py
core/: audit.py  config.py  database.py  deps.py  logging_config.py  middleware.py  models.py  permissions.py  rate_limit.py  roles.py  security.py
files/: models.py  routers.py  schemas.py
mail/: gmail_service.py  routers.py  schemas.py
relay/: .gitignore  config.example.yaml
rooms/: models.py  routers.py  schemas.py
scripts/: create_admin.py
seating/: routers.py  schemas.py  services.py
subjects/: models.py  (+3 more)
(+60 files in other folders)
